[DEPLOY] Image fix

--- a/src/main/resources/templates/posts/post.html
+++ b/src/main/resources/templates/posts/post.html
@@ -59,7 +59,7 @@
     <div>
         <div>사진</div>
         <a th:each="img : ${post.getImages()}">
-            <img th:if="${img.getStoreFilename()}" th:src="|/images/${img.getStoreFilename()}|" width="500" height="500"/>
+            <img th:if="${img.getStoreFilename()}" th:src="${img.getStoreFilename()}" width="500" height="500"/>
         </a>
     </div>
 
